# checkers

./: .gitignore  CMakeLists.txt  main.cpp
.run/: Unnamed.run.xml
include/: board.hpp  checkers.hpp  figures.hpp  include.hpp  local.hpp
